--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "@fastify/swagger-ui": "^5.2.2",
     "@fastify/type-provider-typebox": "^5.1.0",
     "@prisma/client": "^6.4.1",
-    "fastify": "^5.2.1"
+    "bcrypt": "^5.1.1",
+    "fastify": "^5.2.1",
+    "fastify-jwt": "^4.1.3",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.5",
     "prisma": "^6.4.1",
     "tsx": "^4.19.3",
